# networking-midonet

./: .gitreview  MANIFEST.in  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst
doc/source/: index.rst
midonet/neutron/: plugin.py  plugin_rsg.py  plugin_v2.py
midonet/neutron/client/: api.py  base.py  sg_client.py
midonet/neutron/common/: config.py  constants.py  exceptions.py  utils.py
midonet/neutron/db/: agent_membership_db.py  bgp_db.py  bgp_db_midonet.py  bgp_speaker_router_insertion_db.py  gateway_device.py  l2gateway_midonet.py  l3_db_midonet.py  model_base.py  provider_network_db.py  regional_securitygroup_db.py
midonet/neutron/extensions/: bgp.py  bgp_speaker_router_insertion.py  gateway_device.py  logging_resource.py  regional_securitygroup.py
midonet/neutron/ipam/: utils.py
midonet/neutron/services/bgp/: plugin.py
midonet/neutron/services/firewall/: plugin.py
midonet/neutron/services/gw_device/: plugin.py
midonet/neutron/services/l2gateway/: plugin.py
midonet/neutron/services/logging_resource/: plugin.py
midonet/neutron/tests/unit/: midonet_client_mock.py  sg_client_mock.py  test_extension_bgp.py  test_extension_fwaas.py  test_extension_gateway_device.py  test_sg_client.py  (+6 more)
midonet/neutronclient/gateway_device_extension/: _gateway_device.py  _remote_mac_entry.py
midonet/neutronclient/l2gateway_extension/: _l2_gateway.py  _l2_gateway_connection.py
midonet/neutronclient/logging_resource_extension/: _firewall_log.py  _logging_resource.py
tools/: tox_install.sh  tox_install_project.sh
(+16 files in other folders)
