# this file is for packaging system. Version should be the same as setup.py
[metadata]
name = networking-midonet
summary = OpenStack MidoNet Neutron Plugin
description-file =
    README.rst
author = MidoNet
author-email = midonet-dev@lists.midonet.org
home-page = http://www.midonet.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.7

[files]
packages =
    midonet

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking-midonet/locale
domain = networking-midonet

[update_catalog]
domain = networking-midonet
output_dir = networking-midonet/locale
input_file = networking-midonet/locale/networking-midonet.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking-midonet/locale/networking-midonet.pot
